# my_project

./: CMakeLists.txt  Kconfig  README.md  VERSION  env.sh  prj.conf  rehab-bot.code-workspace
boards/: arduino_giga_r1_stm32h747xx_m7.overlay  arduino_portenta_h7_stm32h747xx_m7.overlay
src/: bt_main.c  bt_main.h  bt_settings.c  button.c  can.c  config_svc.c  config_svc.h  controller.c  events.c  flashdrive.c  fsr.c  h4_alt.c  h4_ifx_cyw43xxx_alt.c  led.c  loadcell.c  main.c  sdcard.c  uart_imu.c
